# image

./: .gitignore  CMakeLists.txt
include/: Area.hpp  Image.hpp  ImageIO.hpp  ImageUtil.hpp  Math.hpp  Pixel.hpp  Point.hpp
lib/: image.lib
source/: Area.cpp  Image.cpp  ImageIO.cpp  ImageUtil.cpp  Math.cpp  Pixel.cpp  Point.cpp
test/: CMakeLists.txt  ImageTest.cpp  PixelTest.cpp
